--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+a {
+  color: #a409c4;
+}
+
 .App-header {
   margin: 30px;
 }
@@ -7,6 +11,10 @@
   display: block;
   margin: 0 auto;
   padding: 0;
+}
+
+body {
+  background-color: rgb(224, 235, 224);
 }
 
 .footer {
