--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ a {
   color: #a409c4;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px;
 }
@@ -17,7 +22,7 @@ body {
   background-color: rgb(224, 235, 224);
 }
 
-.footer {
+footer {
   text-align: center;
   margin: 20px;
 }
